atg-dev/src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Case Business Process</fullName>
        <description>This is a support process for cases</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Actions_Resolution__c</fullName>
        <label>Actions/ Resolution</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Amber_Tier__c</fullName>
        <formula>Account.Amber_Tier__c</formula>
        <label>Amber Tier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amber__c</fullName>
        <formula>Account.Amber__c</formula>
        <label>Amber #</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <picklist>
            <picklistValues>
                <fullName>Hierarchy of brands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alterations &amp; Repairs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Service in Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miscellaneous</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Points</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product quality &amp; price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Profile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Store ambiance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YouFirst Support</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>BAH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KWT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OMN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QTR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_Of_Birth__c</fullName>
        <formula>Account.PersonContact.Birthdate</formula>
        <label>Date Of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <formula>Account.PersonContact.FirstName</formula>
        <label>First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Notes__c</fullName>
        <label>Internal Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>Arabic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <formula>Account.PersonContact.LastName</formula>
        <label>Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Linked_order_Transaction__c</fullName>
        <label>Linked order/Transaction</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Linked_product__c</fullName>
        <label>Linked product</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <picklist>
            <picklistValues>
                <fullName>Home Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mall/Location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_status__c</fullName>
        <label>Order status</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Point_Balance__c</fullName>
        <formula>Account.Point_Balance__c</formula>
        <label>Point Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <label>Sub Category</label>
        <picklist>
            <picklistValues>
                <fullName>Cancel Membership with full point transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancel Membership without point transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feedback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Point addition within same account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Point deduction within same account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Point transfer - partial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Point transfer - total</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Programme Inquiries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promotion/Event/Comms Inquiries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Store/Partner Enquiries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Store Inquiries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier downgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communication Opt-Out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communication Opt-In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact details update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other profile update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Card Replacement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Issue Extra Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tech Support- App</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tech Support- Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delays</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost item</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overcharge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsatisfactory outcome</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staff attitude/behavior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staff knowledge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Packing of wrong items</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Packing of damaged items</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staff Grooming</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Account_points__c</fullName>
        <formula>Account.Total_Account_points__c</formula>
        <label>Total Account points</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <recordTypes>
        <fullName>Amber</fullName>
        <active>true</active>
        <businessProcess>Case Business Process</businessProcess>
        <description>This is a record type for amber cases</description>
        <label>Amber</label>
    </recordTypes>
    <recordTypes>
        <fullName>Ecommerce</fullName>
        <active>true</active>
        <businessProcess>Case Business Process</businessProcess>
        <description>This is a record type for ecommerce cases</description>
        <label>Ecommerce</label>
    </recordTypes>
    <recordTypes>
        <fullName>YouFirst</fullName>
        <active>true</active>
        <businessProcess>Case Business Process</businessProcess>
        <description>This is a record type for You First cases</description>
        <label>YouFirst</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>